--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div><!-- site -->
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="analysis-small.json"></script>
-  <script src="page.js"></script>
+  <script src="js/script.js"></script>
   <!-- <script src="bower_components/requirejs/require.js"></script> -->
 </body>
 </html>
