--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <p>After noticing a glaring hole in the lorem-ipsum generator market, KC-Ipsum was born after analyzing 31,482 articles encompassing 9,702,191 words from <a href="http://pitch.com" target="_blank">The Pitch</a> and sprinkling in vocabulary from Wikipedia, BBQ menus, and travel guides. May all of your prototypes and mock-ups represent KC well.</p>
 
   </div><!-- site -->
-  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
   <script src="analysis-small.json"></script>
   <script src="js/script.js"></script>
   <!-- <script src="bower_components/requirejs/require.js"></script> -->
