--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <h2 class="what-the">What...?</h2>
   <p>After noticing a glaring hole in the lorem-ipsum generator market, KC-Ipsum was born after analyzing 31,482 articles encompassing 9,702,191 words from <a href="http://pitch.com" target="_blank">The Pitch</a> and sprinkling in vocabulary from Wikipedia, BBQ menus, and travel guides. May all of your prototypes and mock-ups represent KC well.</p>
+  <p>You can check out the <a href="https://github.com/coreylight/kc-ipsum" target="_blank">github repo</a> to see how this was made and even create your own generator!</p>
 
   </div><!-- site -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
