Meta description update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Kansas City Ipsum</title>
-  <meta name="description" content="Kansas City Ipsum, a data-driven lorem-ipsum generator built by Corey Light">
+  <meta name="description" content="A data-driven lorem-ipsum generator with plenty of sauce, built by Corey Light.">
   <meta name="viewport" content="width=device-width">
   <!-- <link rel="shortcut icon" href="img/favicon.png"> -->
   <link rel="stylesheet" href="css/style.css">
